# lolcat-rs

./: Cargo.toml  LICENSE  README.md
src/: color.rs  main.rs  process.rs
